docs/pages/versions/v56.0.0/sdk/reanimated.mdx
---
title: react-native-reanimated
description: 一个提供 API 的库，可大幅简化创建流畅、强大且易于维护的动画的过程。
sourceCodeUrl: 'https://github.com/software-mansion/react-native-reanimated'
packageName: react-native-reanimated
platforms: ['android', 'ios', 'tvos', 'web', 'expo-go']
inExpoGo: true
---

import { BookOpen02Icon } from '@expo/styleguide-icons/outline/BookOpen02Icon';

import { BoxLink } from '~/ui/components/BoxLink';
import { SnackInline, Terminal } from '~/ui/components/Snippet';

[`react-native-reanimated`](https://docs.swmansion.com/react-native-reanimated/docs/fundamentals/getting-started/) 提供了一个 API，极大地简化了创建流畅、强大且易于维护的动画的过程。

> **Reanimated 使用了与 JavaScriptCore 的“远程 JS 调试”不兼容的 React Native API**。要在应用中使用调试器配合 `react-native-reanimated`，你需要使用 [Hermes JavaScript 引擎](/guides/using-hermes) 和 [Hermes 的 JavaScript Inspector](/guides/using-hermes#javascript-inspector-for-hermes)。

## 安装

<Terminal
  cmd={{
    npm: ['$ npx expo install react-native-reanimated react-native-worklets'],
    yarn: ['$ yarn expo install react-native-reanimated react-native-worklets'],
    pnpm: ['$ pnpm expo install react-native-reanimated react-native-worklets'],
    bun: ['$ bun expo install react-native-reanimated react-native-worklets'],
  }}
/>

<br />

无需额外配置。安装该库后，[Reanimated Babel 插件](https://docs.swmansion.com/react-native-reanimated/docs/fundamentals/glossary#reanimated-babel-plugin) 会在 [`babel-preset-expo`](https://www.npmjs.com/package/babel-preset-expo) 中自动配置。

## 使用

下面的示例展示了如何使用 `react-native-reanimated` 库创建一个简单的动画。

<SnackInline label="使用 react-native-reanimated" dependencies={['react-native-reanimated']}>

{/* prettier-ignore */}
```jsx
import Animated, {
  useSharedValue,
  withTiming,
  useAnimatedStyle,
  Easing,
} from 'react-native-reanimated';
import { View, Button, StyleSheet } from 'react-native';

export default function AnimatedStyleUpdateExample() {
  const randomWidth = useSharedValue(10);

  const config = {
    duration: 500,
    easing: Easing.bezier(0.5, 0.01, 0, 1),
  };

  const style = useAnimatedStyle(() => {
    return {
      width: withTiming(randomWidth.value, config),
    };
  });

  return (
    <View style={styles.container}>
      <Animated.View style={[styles.box, style]} />
      <Button
        title="切换"
        onPress={() => {
          randomWidth.value = Math.random() * 350;
        }}
      />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    alignItems: 'center',
    justifyContent: 'center',
  },
  box: {
    width: 100,
    height: 80,
    backgroundColor: 'black',
    margin: 30,
  },
});
```

</SnackInline>

## 了解更多

<BoxLink
  title="访问官方文档"
  description="获取有关 API 及其使用的完整信息。"
  Icon={BookOpen02Icon}
  href="https://docs.swmansion.com/react-native-reanimated/docs/fundamentals/your-first-animation"
/>
